# wl3-ex1

./: .gitignore  Makefile  README.md  env.example  pyproject.toml
app/: __init__.py  analysis.py  classification.py  cli.py  config.py  db.py  llm.py  transcripts.py  youtube_client.py
prompts/: prompt1.md  prompt2.md
